--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -1,18 +1,22 @@
 .main {
     width: 100%;
-    height: 99vh;
+    min-height: 100vh;
+    position: relative;
+    background: center/cover no-repeat fixed url('/background.jpg');
 }
 
-video {
+.bg-image {
     object-fit: cover;
     width: 100vw;
     height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 0;
 }
 
 .content {
-    position: absolute;
+    position: relative;
     width: 100%;
+    z-index: 1;
 }
